# agent-flight-recorder

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  regression.yml
adr/: ADR-001-agent-flight-recorder.md  ADR-002-storage-strategy.md  ADR-003-redaction-privacy.md  ADR-004-evaluation-regression.md  ADR-005-open-source-boundary.md  README.md
apps/collector/: Dockerfile  pyproject.toml
apps/collector/src/collector/: __init__.py  blob_store.py  dashboard.py  db.py  eval.py  main.py  metrics.py  models.py  otlp.py  paths.py  policy.py  redaction.py  replay.py  risk.py
apps/collector/src/collector/analytics/: clickhouse.py
apps/collector/src/collector/exporters/: __init__.py  otlp_forward.py  targets.py
apps/collector/src/collector/storage/: __init__.py  backends.py  postgres_backend.py  sql.py  sqlite_backend.py
apps/web/: package.json
docs/: architecture.md  evals.md  integrations.md  policies.md  quickstart.md  replay.md
examples/afr-tests/: refund_agent_regression.yml
examples/evals/: refund_tool_correctness.yml
examples/exporters/: README.md
examples/langgraph-refund-agent/: README.md  main.py
examples/openai-agents-refund-agent/: README.md  main.py
examples/policies/: block_forbidden_tools.yml  warn_pii_in_output.yml  (+1 more)
infra/: docker-compose.prod.yml  docker-compose.yml
scripts/: e2e.sh  integration-e2e.sh  policy-e2e.sh  regression.sh  storage-e2e.sh
(+19 files in other folders)
