[project]
name = "afr-collector"
version = "0.1.0"
description = "Agent Flight Recorder trace collector API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "aiosqlite>=0.20.0",
]

[project.scripts]
afr-collector = "collector.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/collector"]